--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tensorflow-models/toxicity": "^1.2.2",
+    "@tensorflow/tfjs": "^3.3.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "reading-time": "^1.3.0",
