--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/use-subscription": "^1.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^4.1.2",
+    "typescript": "4.2.3",
     "vite": "^2.1.3"
   }
 }
